removed figure 1 to be within word limit

--- a/submission_7/football_DAjesuschrist.tex
+++ b/submission_7/football_DAjesuschrist.tex
@@ -145,7 +145,7 @@ Despite the evident links between alcohol and domestic abuse, the role alcohol p
 
 Specifically, we hypothesize that when the England national football team plays, the number of reported alcohol-related domestic abuse cases increases. Based on previous research focusing on the link between the football World Cup and domestic abuse in England (e.g., \citeNP{Brimicombe2012, Kirby2014}), we expect the effect to be stronger on England loss and win days. Exploring the link between football, alcohol, and domestic abuse will deepen our understanding of the pathway through which football (and more specifically the outcome of the match) increases propensity for violence in domestic settings.
 
-In our analysis, we focus on the two largest national football tournaments England participates in, the the FIFA World Cup and UEFA European Football Championship. We exploit the fact that that national teams are randomly allocated (by the random draw of balls from an urn --- the canonical definition of random) to slots in these football tournaments, and the dates of these slots are assigned \emph{before} the allocation of the teams. This allows us to make causal claims about the effect of England matches on alcohol and non-alcohol related domestic abuse. In contrast, \citeA{Card2011} had to rely upon the stochastic nature of game outcomes (after controlling for bookmakers' expectations) to make a causal inference between unexpected losses NFL football and domestic abuse. 
+Here we focus on the two largest national football tournaments England participates in, the the FIFA World Cup and UEFA European Football Championship. We exploit the fact that that national teams are randomly allocated (by the random draw of balls from an urn --- the canonical definition of random) to slots in these football tournaments, and the dates of these slots are assigned \emph{before} the allocation of the teams. This allows us to make causal claims about the effect of England matches on alcohol and non-alcohol related domestic abuse. In contrast, \citeA{Card2011} had to rely upon the stochastic nature of game outcomes (after controlling for bookmakers' expectations) to make a causal inference between unexpected losses NFL football and domestic abuse. 
 
 To test our hypothesis, we investigate whether the daily number of reported alcohol and non-alcohol related domestic abuse cases recorded by the second largest police force in England (West Midlands Police; WMP) between 2010 and 2019 increase on days when the England national team plays in a national football tournament (the FIFA World Cup and UEFA European Football Championship), and whether the effect, if any, depends on the result of the match. Our dataset covers a decade, allowing us to conduct a thorough investigation of the characteristics and temporal pattern of the domestic abuse perpetrated on England match days, and extend our findings to understand various characteristics of this relationship. We also test the robustness of the effect using various model specifications, time periods, and geographical areas. 
 
@@ -169,20 +169,20 @@ When identifying whether alcohol was involved, we primarily rely upon the specif
  Overall there were 427,351 reported cases of domestic abuse in this 10-year period, comprising 17\% of all recorded crimes and incidents. Of these cases, 26\% were alcohol-related (in contrast, only 9\% of non domestic abuse cases are alcohol-related). However, it is worth noting that the identification of alcohol-involvement is likely to be more precise for domestic abuse cases, where the victim and offender know each other, as opposed to other types of criminal behaviours (especially where the offender is unknown). In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents is between 1.42--3.95 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases is between 0.84--1.67 cases per 100,000 individuals (the overall rate is between 2.40--5.01 per 100,000 individuals). 
  
 
-Figure \ref{fig:descriptive} shows the daily average number of alcohol and non-alcohol related domestic abuse cases reported to WMP by day of the week. The reported number of domestic abuse cases, and particularly alcohol-related cases shows strong variation throughout the week, with generally fewer reported cases mid-week, and a pronounced increase over the weekend. 
+%Figure \ref{fig:descriptive} shows the daily average number of alcohol and non-alcohol related domestic abuse cases reported to WMP by day of the week. The reported number of domestic abuse cases, and particularly alcohol-related cases shows strong variation throughout the week, with generally fewer reported cases mid-week, and a pronounced increase over the weekend. 
 
-\begin{figure} 
-\begin{center} 
-\includegraphics[scale = 0.6]{descriptives.pdf}
-\caption{The daily average number of alcohol and non-alcohol related domestic abuse cases reported to the police, by day of the week. The error bars show bootstrapped 95\% confidence intervals, stratified by month. \label{fig:descriptive}} 
-\end{center} 
-\end{figure} 
+%\begin{figure} 
+%\begin{center} 
+%\includegraphics[scale = 0.6]{descriptives.pdf}
+%\caption{The daily average number of alcohol and non-alcohol related domestic abuse cases reported to the police, by day of the week. The error bars show bootstrapped 95\% confidence intervals, stratified by month. \label{fig:descriptive}} 
+%\end{center} 
+%\end{figure} 
 
 In the UK, the term ``domestic abuse'' refers to a wide range of behavioural patterns, from physical and sexual violence to psychological, emotional, financial abuse, threatening behaviour, stalking and harassment, either within a family or an intimate relationship \cite{ONS}. Previous research has mostly focused on intimate partner violence (IPV), the largest subcategory of domestic abuse. While IPV is more common than abuse perpetrated by family members \cite{ONS}, our dataset does not contain information about the exact relationship between the victim and perpetrator (family versus current or ex-partner), therefore we cannot separate the two types of abuse, and we will refer to them collectively as ``domestic abuse''.
 
 In our analyses, we explore various characteristics of domestic abuse and other criminal behaviours (not classified as domestic abuse) perpetrated on England football days. Specifically, we focus on property-related crimes (where the offence class is either theft or robbery), hate crimes (where the offence description includes the words ``hate'', ``racial'' or ``racially''), and other violent crimes, where the offence class is classified as violence against the person, after excluding cases of domestic abuse. 
 
-We also explore specific characteristics of domestic abuse cases. To this end, we classify domestic abuse cases by whether they are newly reported (with no earlier record for the same victim-offender pair in our dataset), publicly perpetrated (cases where the location is not a residential dwelling), or result in an injury (where the injury class is either minor or serious injury). In addition, we will examine how reporting behaviour (measured by the number of hours elapsed between time of perpetration and reporting), and in the case of repeat incidents (multiple cases with the same victim-offender pair), days elapsed between subsequent cases (days since last case, days until next case) are affected by England football matches.
+We also explore specific characteristics of domestic abuse cases. To this end, we classify domestic abuse cases by whether they are newly reported (with no earlier record for the same victim-offender pair in our dataset), publicly perpetrated (cases where the location is not a residential dwelling), or result in an injury (where the injury class is either minor or serious injury). In addition, we examine how reporting behaviour (measured by the number of hours elapsed between time of perpetration and reporting), and in the case of repeat incidents (multiple cases with the same victim-offender pair), days elapsed between subsequent cases (days since last case, days until next case) are affected by England football matches.
 
 
 
@@ -193,7 +193,7 @@ Our dataset contains all cases of domestic abuse that have been reported to the 
 
  There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All of these tournaments took place in the months of June and July. Table \ref{Tab:matches} in the Appendix shows the matches of the English national football team in these tournaments. Out of 22 matches overall, England won and lost both eight times, while six matches ended in a draw. 
 
-While the main focus of this study is the effect of football on domestic abuse, to investigate whether the association between football and domestic abuse can be observed for other sports, we also focus on rugby, the second most popular sport in England \cite{Ipsos2003}. Specifically, we obtained historical results data from the Six Nations tournament, a high-profile international rugby tournament that takes place every year in the months of February and March with the participation of England, Wales, Scotland, Ireland, France and Italy. Each tournament year, England plays one match with each of the other five participating countries, and these matches take place almost always during the weekend (Saturday, $N = 37$; Sunday, $N = 11$; Friday, $N = 2$). The most common result for England is to win ($N = 35$), much less frequent are losses ($N = 12$), and draws ($N = 2$).
+While the main focus of this study is the effect of football on domestic abuse, we also explore the effect of rugby, the second most popular sport in England \cite{Ipsos2003}. We obtained historical results data from the Six Nations tournament, an international rugby tournament taking place every year in February and March with the participation of England, Wales, Scotland, Ireland, France, and Italy. Each year, England plays one match with each of the other five participating countries, and these matches take place almost always during the weekend (Saturday, $N = 37$; Sunday, $N = 11$; Friday, $N = 2$). The most common result for England is to win ($N = 35$), much less frequent are losses ($N = 12$), and draws ($N = 2$).
 
 \section{Methods}
 
@@ -358,7 +358,7 @@ Observations & 3,570 & 3,570 \\
 \end{threeparttable} 
 \end{table*}
 
-To explore the impact of temporal autocorrelation, we also estimated the models shown in Table \ref{coremodel} using Newey-West standard errors (see Table \ref{coremodelnw} in the Appendix). The CIs presented in the two tables are very similar, suggesting that temporal autocorrelation did not have a significant impact on our original estimates.  
+We also estimated the models shown in Table \ref{coremodel} using Newey-West standard error correction (see Table \ref{coremodelnw} in the Appendix). The CIs presented in the two tables are very similar, suggesting that temporal autocorrelation did not have a significant impact on our original estimates.  
 
 
  \begin{figure}[!htbp]
@@ -924,7 +924,7 @@ Our key finding is that an England victory in a national football tournament is 
 We also found evidence for a remarkably similar, 47\% increase in the number of alcohol-related other (non domestic-abuse related) violent cases. While it is possible that misclassified domestic abuse cases contribute to this result (e.g, if the victim chooses not to disclose any relationship to the offender), these results suggests that the increase in alcohol-related violence following an England victory is not limited to domestic settings. 
 
 
-Our detailed crime dataset allowed us to explore the temporal pattern of the increase in alcohol-related domestic abuse on England match days. This analysis has revealed that the increase starts in the three-hour period of the match, peaks in the three-hour period afterwards, followed by a gradual decline. This temporal pattern is strongly consistent with a causal link between England victories and the observed increase in the number of alcohol-related domestic abuse cases. We see these results as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and violent behaviour in domestic, and other settings. 
+We also explored the temporal pattern of the increase in alcohol-related domestic abuse on England match days. This analysis has revealed that the increase starts in the three-hour period of the match, peaks in the three-hour period afterwards, followed by a gradual decline. We see these results as strong quantitative evidence that alcohol plays an instrumental role in the relationship between football and violent behaviour in domestic, and other settings. 
 
 
 
@@ -937,7 +937,7 @@ Our detailed crime dataset allowed us to explore the temporal pattern of the inc
  %Of particular interest is the effect of football on non-domestic violent crimes, since it is possible that alcohol-fuelled violence that follows an England victory is not limited to family and intimate partner relationships.
 
 
- Our offender-victim gender subgroup analysis suggest that the increase is the strongest in the group of Male to Female domestic alcohol-related abuse cases. However, it should be noted that substantial differences in the number of cases by gender group hinders a precise estimation of the effect of football on alcohol and non-alcohol-related domestic abuse (illustrated by the width of the confidence intervals in the other three gender groups). This is because a male offender and a female victim is by far the most common gender group in our dataset (78\%), followed by female to male (10\%), male to male (7\%), and female to female (5\%) cases.
+ Our offender-victim gender subgroup analysis suggest that the increase is the strongest in the group of Male to Female domestic alcohol-related abuse cases. However, it should be noted that substantial differences in the number of cases by gender group hinders a precise estimation of the effect of football on alcohol and non-alcohol-related domestic abuse. This is because a male offender and a female victim is by far the most common gender group in our dataset (78\%), followed by female to male (10\%), male to male (7\%), and female to female (5\%) cases.
 
 
 We also examined whether the link between England victories and domestic abuse is specific to football, by focusing on England's second most popular sport, rugby. Our results provide no evidence that England matches in the annual Six Nations international rugby tournament affect the number of reported domestic abuse cases, alcohol-related or not, potentially stemming from differences in timing, media coverage, audience numbers, and the involvement of alcohol between the two sport tournaments.
@@ -956,6 +956,8 @@ It had been previously suggested that the apparent link between football and dom
 
 However, our analyses do not provide support for any of these hypotheses. For example, we would expect that higher levels of policing on England match days would result in an increased number of recorded cases perpetrated outside, and that a successful pre-tournament awareness campaign would result in an increase in the number of newly reported cases. We found no evidence for these patterns. In addition, it is unclear why the effect of other events, different policing practices, or awareness campaigns would depend on the result of the match and affect only alcohol-related cases. 
 
+
+
 In fact, our results suggest a causal link between England victories in national football tournaments and an increase in the number of alcohol-related domestic abuse cases reported to the police. First, England match days were randomly allocated, and the effect is only seen for England wins in alcohol-related cases, which limits the set of confounding factors to those plausibly synchronised with England wins, and those that would affect only alcohol-related domestic abuse. Second, our three-hour analysis shows that the temporal pattern of the increase throughout England match days is highly consistent with a causal link between football and alcohol-related domestic abuse. Finally, by re-analysing a dataset from a previous study, we almost exactly replicated the England win effect seen in our dataset. While the effect of a victory is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, time of day, etc.), the estimated effect of an England victory on the number of alcohol-related reported domestic abuse cases is robust to different model specifications, using data from a different geographical area, and the exclusion of specific tournament years. 
 
 Despite the evidence for the link between England victories and domestic abuse, the exact pathway through which England wins result in an increase in alcohol-related domestic abuse remains unclear. Anecdotal evidence implies a spike in the number of alcohol poisoning cases following an England victory  \cite{Davies2018}, suggesting that in the case of England, victories of the national football team result in elevated levels of alcohol consumption. This is consistent with the temporal pattern of the England win effect we have seen in our results, suggesting that prolonged, alcohol-fuelled celebrations following an England victory can create an environment where violent behaviours are more likely to manifest. Future research could focus on exploring the mechanism through which post-victory intoxication amongst England football fans translate into increased levels of violence (domestic or not).
@@ -965,8 +967,8 @@ An important limitation of our analysis is that it only relies on cases recorded
 
 
 
-The most comprehensive investigation of the link between sports and domestic abuse by \citeA{Card2011} used NFL data, and found that a surprise loss of the home team leads to a 10\% increase in the rate of IPV cases reported to the police. They found no evidence for the modulating role of alcohol (i.e., the same increase was observed for alcohol- and non-alcohol-related cases). This result is clearly in contrast with our findings, which instead suggest that England victories have the largest effect on the reported number of alcohol-related domestic abuse cases.
-While we can only hypothesise about the reason for this discrepancy, it is worth noting that there several key differences between these studies (e.g., country, sport, type of tournament), all of which are likely to impact on the link between sports fixtures and domestic abuse. \citeauthor{Card2011}'s results suggest that in the context of NFL, the negative emotional shock experienced by the fan who expected his team to win ultimately manifests in violence. We argue that in the case of England's participation in international football tournaments, the historical context is key to understand why victories have the largest impact on alcohol-related domestic abuse.
+The most comprehensive investigation of the link between sports and domestic abuse by \citeA{Card2011} used NFL data, and found that a surprise loss of the home team leads to a 10\% increase in the rate of IPV cases reported to the police. They found no evidence for the modulating role of alcohol. This result is clearly in contrast with our findings, which instead suggest that England victories have the largest effect on the reported number of alcohol-related domestic abuse cases.
+It is important to note that there several key differences between these studies (e.g., country, sport, type of tournament), all of which will impact the sport's effect on domestic abuse. \citeauthor{Card2011}'s results suggest that in the context of NFL, the negative emotional shock experienced by the fan who expected a victory ultimately manifests in violence. In the case of England's participation in international football tournaments, we think the historical context is key to understand why victories have the largest impact on alcohol-related domestic abuse.
 
 
 Based on the pre-match betting odds, all of the England victories were expected in our dataset. This suggests that in the context of England and national football tournaments, it is living up to the expectations of the fans that results in the largest emotional effect (as opposed to an unexpected loss). Illustrating the national importance of a victory, English newspapers' narratives about the team's performance in these tournaments are often characterised with high levels of optimism, expectation and yearning for the glory of the 1966 World Cup which was won by England \cite{Vincent2010}. We conjecture that in the case of England, the fulfilment of these expectations can have a substantial impact on fans' alcohol consumption through post-match nationwide celebrations, resulting in disinhibitory effects increasing the likelihood of violent behaviours. 
